Version 4.3.0

* Added a [VERY REDACTED] MagicLib bounty, only available by enabling "enableAdversarySillyBounties"
  - You'll also need to attempt or defeat its lesser bounty version first.
* Major adjustments to MagicLib bounties:
  - Most bounties now have custom officers on designated ships
  - Changed ship variants and/or composition for most bounties
  - Rewards have been adjusted for some bounties
* Added "rings_asteroid0" as a valid option for ring bands
* More code refactors/cleanup



Version 4.2.0

* Changed a Pegasus variant in a MagicLib bounty
* Externalized most Strings within the mod code, which should help with any translation efforts
  - A lot of code refactors and adjustments, as a result.
* Ring types "rings_ice", "rings_dust", and "rings_special" now require a '0' appended to them
  - Now "rings_ice0", "rings_dust0", and "rings_special0"
* Fixed the Blueprint Stealing delay using the Dynamic Doctrine's delay setting instead if LunaLib is not enabled.
* Added two extraordinary MagicLib bounties that completely break vanilla boundaries
  - Disabled by default; use the "enableAdversarySillyBounties" setting in settings.json or LunaLib to allow these bounties to spawn in the bounty board
  - Requires the MagicLib library mod to work
* Updated LunaLib compatibility
  - If you use LunaLib alongside this mod, you'll need to update LunaLib to at least v1.7.4 to ensure compatibility.



Version 4.1.0

* Revamped MagicLib bounties with 0.96 additions:
  - Changed all bounties with different ships and variants, some of which use the new 0.96 ships and weapons.
  - Phase bounty is now an Independent bounty; removed the Smuggler bounty as a result.
  - Added a Sindrian Diktat bounty, using the new Lion's Guard ships.
  - Increased credit rewards for most bounties
* Readjusted most of the Adversary's possible doctrines, including changing priority weapons and fighters.
* Some code refactors, mostly to account for LunaLib changes



Version 4.0.0
