@@ -28,7 +28,7 @@
 			# Defaults to false if this entry is omitted
 			"isCoreWorldSystem":false,
 
-			# True -> adds nebulas throughout this systems
+			# True -> adds nebula clouds in this system, based on the system's constellation age
 			# Defaults to false if this entry is omitted
 			"hasSystemwideNebula":false,
 
@@ -56,7 +56,7 @@
 
 			# Which background to use in this system
 			# System backgrounds are found in the starsector-core/graphics/backgrounds folder
-			# Uses default system background if this entry is omitted
+			# Uses a default system background, dependent on "hasSystemwideNebula", if this entry is omitted
 			"systemBackground":"background6.jpg",
 
 			# What music to play while in this star system
