@@ -6,5 +6,5 @@
   "description":"Adds an isolated, player-like faction, situated in a heavily-fortified star system. Also adds the ability to add custom star systems through a JSON config file.",
   "gameVersion":"0.96a-RC10",
   "jars":["jars/Adversary.jar"],
-  "modPlugin":"data.scripts.AdversaryModPlugin"
+  "modPlugin":"data.scripts.AdversaryModPlugin",
 }
