@@ -1,12 +1,16 @@
 Version 4.3.0
 
 * Added a [VERY REDACTED] MagicLib bounty, only available by enabling "enableAdversarySillyBounties"
-  - You'll also need to attempt or defeat its lesser bounty version first.
+  - You'll need to attempt or defeat its lesser bounty version first.
 * Major adjustments to MagicLib bounties:
-  - Most bounties now have custom officers on designated ships
+  - Most bounties now have custom officers on designated ships, increasing overall bounty difficulty
   - Changed ship variants and/or composition for most bounties
   - Rewards have been adjusted for some bounties
 * Added "rings_asteroid0" as a valid option for ring bands
+* "systemBackground" now defaults to a background based on the system's "hasSystemwideNebula" toggle and its constellation age
+  - Both default star systems no longer have a set "systemBackground"
+* Added a set of star systems to presetStarSystems.json
+  - These star systems are set up to better optimize for the Hostile Activity and Hyperspace Topology events
 * More code refactors/cleanup
 
 
